--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,6 +1,9 @@
-html,
-body {
-    height: 100%;
+html,body {
+	height: 100%;	
+	background-size: cover;
+	font-family: Arial;
+    /*color:#235288;*/
+    background-color: #235288;
 }
 
 .wrap {
@@ -112,4 +115,50 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+
+/*
+esto es nuestro 
+*/
+
+
+ul {
+	margin: 0px;
+	padding: 0px;
+	list-style: none;
+
+}
+
+ul li {
+	float: left;
+	width: 200px;
+	height: 40px;
+	background-color: black;
+	opacity: .8;
+	line-height: 40px;
+	text-align: center;
+
+}
+
+ul li a {
+	text-decoration: none;
+	color: white;
+	display: block;
+
+}
+
+ul li a:hover {
+	background-color: green;
+
+
+}
+
+ul li ul li {
+	display: none;
+
+}
+
+ul li:hover ul li{
+	display: block;
+
 }
