--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,4 @@
+
 html,body {
 	height: 100%;	
 	background-size: cover;
@@ -6,121 +7,14 @@ html,body {
     background-color: #235288;
 }
 
-.wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
+
+
+/* Bootstrap Reset
+---------------------------------------------------------------- */
+.mainmenu{
+	width: 100%;
+	right: 1%;
 }
-
-.wrap > .container {
-    padding: 70px 15px 20px;
-}
-
-.footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-}
-
-.jumbotron {
-    text-align: center;
-    background-color: transparent;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-.not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
-
-a.asc:after {
-    content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-    content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
-}
-
-.hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
-
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
-}
-
-/* align the logout "link" (button in form) of the navbar */
-.nav li > form > button.logout {
-    padding: 15px;
-    border: none;
-}
-
-@media(max-width:767px) {
-    .nav li > form > button.logout {
-        display:block;
-        text-align: left;
-        width: 100%;
-        padding: 10px 15px;
-    }
-}
-
-.nav > li > form > button.logout:focus,
-.nav > li > form > button.logout:hover {
-    text-decoration: none;
-}
-
-.nav > li > form > button.logout:focus {
-    outline: none;
-}
-
-/*
-esto es nuestro 
-*/
-
 
 ul {
 	margin: 0px;
@@ -128,7 +22,6 @@ ul {
 	list-style: none;
 
 }
-
 ul li {
 	float: left;
 	width: 200px;
@@ -143,13 +36,11 @@ ul li {
 ul li a {
 	text-decoration: none;
 	color: white;
-	display: block;
 
 }
 
 ul li a:hover {
 	background-color: green;
-
 
 }
 
@@ -157,26 +48,6 @@ ul li ul li {
 	display: none;
 
 }
-
-ul li:hover ul li{
-	display: block;
-
-}   
-
-/* -------------------------------------------------------------
-	Â© IceTheme 2013
----------------------------------------------------------------- */
-
-
-/* Bootstrap Reset
----------------------------------------------------------------- */
-body {
-	font-family:Georgia, "Times New Roman", Times, serif;
-	/*background:#DBDAD7;*/
-	background: url(../images/bg_mescyt_website.jpg) #235288 center top no-repeat;
-	font-size:15px;
-	line-height:24px;
-	overflow-x:hidden;}
 
 /* Codigo para reducir el alto de linea del modulo de eventos y actividades _atp_ */
 div.ohanah.module {
